Fix dark mode css

--- a/less/buma.less
+++ b/less/buma.less
@@ -32,7 +32,7 @@
 }
 
 /* dark */
-body.dark-buma {
+body.theseed-dark-mode {
     .nav {
         background: #424242;
         color: white;
